--- a/api/src/main/resources/tiger-common.properties
+++ b/api/src/main/resources/tiger-common.properties
@@ -1,17 +1,15 @@
-server.port=${port:9666}
+server.port=${port:9777}
 discovery.enabled=true
 discovery.discovery.enabled=true
 discovery.register.enabled=true
 discovery.http.connectTimeout=5
 discovery.http.writeTimeout=5
 discovery.http.readTimeout=5
-discovery.hsf.maxWaitTime=9000
-discovery.hsf.clientTimeout=9000
 ## redis
 redis.host=127.0.0.1
 redis.port=26379
-redis.pw=lili
+redis.pw=animal
 ## rabbitmq
 mq.endpoints=127.0.0.1
 ## etcd config ##
-etcd.endpoints=127.0.0.1:2379
+etcd.endpoints=http://localhost:2379,http://localhost:22379,http://localhost:32379
